--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/passport": "^1.0.16"
