--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/express-session": "^1.18.0",
     "@types/passport": "^1.0.16"
   }
 }
