--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1"
   },
