--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.28.0",
+    "react-select": "^5.8.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-select": "^5.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
