--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.28.0",
     "react-select": "^5.8.3",
     "react-textarea-autosize": "^8.5.5",
+    "react-type-animation": "^3.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
